# gcmgl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.ps3  PARAM.SFO.xml  README.md  THIRD-PARTY-NOTICES.md  build_linux_x86_64.sh  build_ps3.sh  pull_submodules.sh  run_linux_x86_64.sh
public/tier0/: dbg.h  platform.h
scripts/: build_linux_x86_64.sh  build_ps3.sh  generate_glad.sh  pull_submodules.sh  run_linux_x86_64.sh
shaders/: compile_shaders.py
shaders/cg/: example.fcg  example.vcg  example_lit.vcg  example_plasma.fcg  example_plasma.vcg  example_rainbow.vcg  example_rainbow_instanced.fcg  example_rainbow_instanced.vcg  lit.fcg  post_desaturate.fcg  post_desaturate.vcg  textured.fcg  textured.vcg  texturedLit.fcg  texturedLit.vcg
shaders/glsl/: example.frag  example.vert  example_lit.frag  example_lit.vert  example_plasma.frag  example_plasma.vert  example_rainbow.vert  example_rainbow_instanced.frag  example_rainbow_instanced.vert  example_textured.vert  textured.frag  texturedLit.frag
shaders/slang/: example_lit.slang  example_plasma.slang  example_rainbow.slang  example_rainbow_instanced.slang  example_textured.slang  example_textured_lit.slang
src/: Main.cpp  Main.h
src/examples/: Camera.h  Vertex.h
src/examples/example_batch/: Batch.cpp  Batch.h
src/examples/example_batchInstanced/: BatchInstanced.cpp  BatchInstanced.h
src/examples/example_cube/: Cube.cpp  Cube.h
src/examples/example_lit/: Lit.cpp  Lit.h
src/examples/example_shader/: Shader.cpp  Shader.h
src/examples/example_textured/: Textured.cpp  Textured.h
src/examples/example_texturedLit/: TexturedLit.cpp  TexturedLit.h
src/examples/example_triangle/: Triangle.cpp  Triangle.h
src/platform/ps3/spu/: SpuCommon.h  SpuUtils.h
src/renderer/: BatchRenderer.cpp  BatchRenderer.h  PostProcessingRenderer.h  Renderer.cpp  Renderer.h
src/renderer/gcm/: GcmBatchRenderer.cpp  GcmBatchRenderer.h  GcmPostProcessingRenderer.cpp  GcmPostProcessingRenderer.h  GcmRenderer.cpp  GcmRenderer.h
src/renderer/gcm/spu/: SpuBatchTransformJob.c  SpuBatchTransformJob.h  SpuBatchTransformManager.cpp  SpuBatchTransformManager.h  SpuFrustumCullJob.c  SpuFrustumCullJob.h  SpuFrustumCullManager.cpp  SpuFrustumCullManager.h  SpuUtils.h
src/renderer/gl/: GlBatchRenderer.cpp  GlBatchRenderer.h  GlRenderer.cpp  GlRenderer.h
src/utils/: Color.cpp  Color.h  FixedString.h  RsxHeap.cpp  RsxHeap.h  Time.cpp  Time.h  Utils.cpp  Utils.h  UtlMap.h  UtlMemory.h  UtlPair.h  UtlVector.h
src/window/: Window.h  WindowManager.cpp  WindowManager.h
src/window/glfw/: WindowGlfw.cpp  WindowGlfw.h
src/window/ps3/: WindowPs3.cpp  WindowPs3.h
